ci(fetch-logs): fix Windows console encoding crash in parser and enforce UTF-8
- parse_gh_run_zip.py now prints with safe encoding fallback
- set PYTHONIOENCODING=UTF-8 in fetch-run-logs workflow steps

This resolves UnicodeEncodeError (cp1252) in Fetch Run Logs (Manual).

--- a/.github/workflows/fetch-run-logs.yml
+++ b/.github/workflows/fetch-run-logs.yml
@@ -44,6 +44,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
+          PYTHONIOENCODING: 'utf-8'
         run: |
           $args = @()
           if ('${{ inputs.run_url }}' -ne '') { $args += '--run-url'; $args += '${{ inputs.run_url }}' }
@@ -64,6 +65,8 @@ jobs:
 
       - name: Parse and summarize logs
         shell: pwsh
+        env:
+          PYTHONIOENCODING: 'utf-8'
         run: |
           $id = '${{ inputs.run_id }}'
           $url = '${{ inputs.run_url }}'
