ci(release): add advisory guard script and allow ci-* tag triggers
- add scripts/ci/guard-release-env.mjs (advisory; logs to Step Summary)
- release.yml triggers: include 'ci-*' tags along with 'v*'

Fixes missing script failure; enables CI-tag trigger as requested.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release Pipeline - Dev to CI to Prod (Simplified)
 on:
   push:
     branches: [main, release/*]
-    tags: ['v*']
+    tags: ['v*', 'ci-*']
   workflow_dispatch:
     inputs:
       environment:
