--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,9 @@ jobs:
           python-version: '3.x'
       - name: Install dependencies (with postinstall)
         uses: ./.github/actions/npm-install
+        env:
+          # Prefer skipping optional native deps to reduce flakiness; we'll ensure rollup native explicitly
+          NPM_CONFIG_OMIT: optional
       - name: Strip BOMs in config files
         run: node scripts/ci/fix-bom.cjs
       - name: Ensure rollup native package (win32-x64)
