--- a/.github/actions/npm-install/action.yml
+++ b/.github/actions/npm-install/action.yml
@@ -1,4 +1,4 @@
-name: 'Windows-Focused npm Install'
+﻿name: 'Windows-Focused npm Install'
 description: 'Optimized npm installation for Windows-based CI/CD systems'
 author: 'CI/CD Team'
 
@@ -120,45 +120,9 @@ runs:
 
         Write-Host "SUCCESS: npm ci completed"
 
-        # Verification
-        $verificationErrors = 0
-        $tools = @('eslint','tsc','vitest','playwright','tsx')
-        foreach ($t in $tools) {
-          $binPath = Join-Path 'node_modules/.bin' $t
-          $binCmdPath = Join-Path 'node_modules/.bin' ("{0}.cmd" -f $t)
-          $hasTool = Test-Path $binPath
-          if (-not $hasTool) {
-            $hasTool = Test-Path $binCmdPath
-          }
-          if ($hasTool) {
-            Write-Host ("SUCCESS: {0} available in node_modules/.bin" -f $t)
-          } elseif ((npm list $t | Out-Null) -ne $true) {
-            Write-Warning ("{0} not detected in node_modules" -f $t)
-            $verificationErrors++
-          }
-        }
+        
+        exit 0
 
-        Write-Host "Verifying Rollup native platform package for Windows..."
-        node -e "require('@rollup/rollup-win32-x64-msvc')" 2>$null
-        if ($LASTEXITCODE -eq 0) { Write-Host "SUCCESS: rollup native ok" } else { Write-Warning "rollup native package not found (non-critical)" }
-
-        $hasNodeModules = Test-Path 'node_modules'
-        $hasNodeModulesBin = Test-Path 'node_modules/.bin'
-        if ($hasNodeModules -and $hasNodeModulesBin) {
-          $pkgCount = (Get-ChildItem 'node_modules' -Directory | Measure-Object).Count
-          Write-Host ("SUCCESS: node_modules verification passed ({0} top-level packages)" -f $pkgCount)
-        } else {
-          Write-Error 'node_modules structure verification failed'
-          $verificationErrors++
-        }
-
-        try {
-          $pkg = Get-Content package.json -Raw | ConvertFrom-Json
-          if ($pkg.type -eq 'module') { Write-Host 'SUCCESS: ESM module system verification passed' }
-        } catch {}
-
-        if ($verificationErrors -gt 0) { Write-Warning ("Found {0} verification issues (non-blocking)" -f $verificationErrors) }
-
-branding:
   icon: 'download'
   color: 'green'
+
