--- a/.github/actions/npm-install/action.yml
+++ b/.github/actions/npm-install/action.yml
@@ -1,5 +1,5 @@
-﻿name: 'Windows-Focused npm Install'
-description: 'Optimized npm installation for Windows-based CI/CD systems'
+name: 'Windows-Focused npm Install'
+description: 'Optimized npm installation for Windows-based CI/CD systems (lean/full modes with logs)'
 author: 'CI/CD Team'
 
 inputs:
@@ -11,9 +11,18 @@ inputs:
     description: 'Node.js version'
     required: false
     default: '20.x'
+  mode:
+    description: 'Install mode: lean or full'
+    required: false
+    default: ''
 
-# Outputs removed to avoid referencing non-existent step IDs
-# Use npm --version and node --version if version info is needed
+outputs:
+  logs-dir:
+    description: 'Logs directory for this run'
+    value: ${{ steps.meta.outputs.logs-dir }}
+  mode:
+    description: 'Resolved install mode'
+    value: ${{ steps.meta.outputs.mode }}
 
 runs:
   using: 'composite'
@@ -34,33 +43,36 @@ runs:
         Write-Host ("Node.js version: {0}" -f (node --version))
         Write-Host ("npm version: {0}" -f (npm --version))
 
-    - name: Validate environment variables
+    - name: Compute logs dir and mode
+      id: meta
       shell: pwsh
       working-directory: ${{ inputs.working-directory }}
       run: |
-        Write-Host "Validating critical environment variables..."
-        Write-Host ("NODE_ENV: {0}" -f ($env:NODE_ENV ?? 'not set'))
-        Write-Host ("NPM_CONFIG_PRODUCTION: {0}" -f ($env:NPM_CONFIG_PRODUCTION ?? 'not set'))
-        if ($env:NODE_ENV -ne 'development' -or $env:NPM_CONFIG_PRODUCTION -ne 'false') {
-          Write-Warning "Environment vars may prevent devDependencies installation. Recommended: NODE_ENV=development, NPM_CONFIG_PRODUCTION=false"
-        }
+        $d = Get-Date -Format 'yyyy-MM-dd'
+        $logs = "logs/$d/npm-install"
+        New-Item -ItemType Directory -Force -Path $logs | Out-Null
+        "logs-dir=$logs" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8
+        # Decide mode: explicit input > tag/production dispatch > lean
+        $modeIn = '${{ inputs.mode }}'
+        $isTag = ($env:GITHUB_REF_TYPE -eq 'tag')
+        $isProdDispatch = ($env:GITHUB_EVENT_NAME -eq 'workflow_dispatch' -and $env:INPUT_ENVIRONMENT -eq 'production')
+        $mode = if ($modeIn -ne '') { $modeIn } elseif ($isTag -or $isProdDispatch) { 'full' } else { 'lean' }
+        "mode=$mode" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8
+        Write-Host ("[npm-install] logs: {0} | mode: {1}" -f $logs, $mode)
 
-    - name: Hardened npm install with ESM support
+    - name: Install (lean/full with retries)
       shell: pwsh
       working-directory: ${{ inputs.working-directory }}
       run: |
-        Write-Host "Starting Windows-focused npm installation..."
-        Write-Host ("Runner: {0}" -f $env:RUNNER_OS)
-        Write-Host "Current npm configuration (subset):"
-        try { npm config list | Select-String -Pattern 'fetch-retries|registry|fund|audit' -SimpleMatch | ForEach-Object { $_.Line } } catch {}
-
-        # ESM-friendly npm environment variables
+        $mode = '${{ steps.meta.outputs.mode }}'
+        $logs = '${{ steps.meta.outputs.logs-dir }}'
+        $logFile = Join-Path $logs 'npm_install.log'
+        Write-Host ("Starting npm install (mode={0})..." -f $mode)
+        # Baseline npm environment
         $env:NPM_CONFIG_MAXSOCKETS = '8'
         $env:NPM_CONFIG_FUND = 'false'
         $env:NPM_CONFIG_AUDIT = 'false'
         $env:NPM_CONFIG_PROGRESS = 'false'
-
-        # Additional hardened npm configs to improve reliability on Windows CI
         npm config set fund false --location=project | Out-Null
         npm config set audit false --location=project | Out-Null
         npm config set legacy-peer-deps true --location=project | Out-Null
@@ -68,60 +80,57 @@ runs:
         npm config set fetch-retry-maxtimeout 600000 --location=project | Out-Null
         npm config set fetch-retry-mintimeout 20000 --location=project | Out-Null
 
-        $npmExecutable = (Get-Command npm -ErrorAction Stop).Source
-        if (-not $npmExecutable) {
-          throw 'npm executable not found on PATH (required for npm ci)'
-        }
-
-        function Invoke-NpmCiAttempt([string]$extraArgs) {
+        function Invoke-Cmd([string]$cmdline) {
           $global:LASTEXITCODE = 0
-          Write-Host ("[npm-install] running: npm ci {0}" -f $extraArgs)
-          npm ci $extraArgs 2>&1 | Tee-Object -FilePath npm_install.log -Append
-          return @{ Ok = ($LASTEXITCODE -eq 0); TimedOut=$false; Code=$LASTEXITCODE }
+          Write-Host ("[npm-install] running: {0}" -f $cmdline)
+          cmd /c $cmdline 2>&1 | Tee-Object -FilePath $logFile -Append
+          return $LASTEXITCODE
         }
 
-        $attempts = @(
-          @{ Args='' },
-          @{ Args='--maxsockets=5' },
-          @{ Args='--maxsockets=1' },
-          @{ Args='' }
-        )
-
+        $attempts = @('', '--maxsockets=5', '--maxsockets=1', '')
         $success = $false
-        for ($i=0; $i -lt $attempts.Count; $i++) {
-          $a = $attempts[$i]
-          Write-Host ("Attempt {0} (args='{1}')" -f ($i+1), $a.Args)
-          $res = Invoke-NpmCiAttempt -extraArgs $a.Args
-          if ($res.Ok) { $success = $true; break } else {
+        $start = Get-Date
+
+        if ($mode -eq 'full') {
+          for ($i=0; $i -lt $attempts.Count; $i++) {
+            $args = $attempts[$i]
+            $code = Invoke-Cmd ("npm ci {0}" -f $args)
+            if ($code -eq 0) { $success = $true; break }
             if ($i -lt ($attempts.Count-1)) {
               $sleep = 15 * ($i+1)
-              Write-Warning ("Attempt {0} failed (code={1}, timeout={2}). Sleeping {3}s before retry..." -f ($i+1), $res.Code, $res.TimedOut, $sleep)
+              Write-Warning ("Attempt {0} failed (code={1}). Sleeping {2}s..." -f ($i+1), $code, $sleep)
               Start-Sleep -Seconds $sleep
             }
           }
-        }
-
-        if (-not $success) {
-          Write-Warning "npm ci failed after retries. Falling back to 'npm install'..."
-          try {
-            npm cache verify | Out-Null
-          } catch {}
-          $LASTEXITCODE = 0
-          npm install --no-audit --fund=false --prefer-offline 2>&1 | Tee-Object -FilePath npm_install.log -Append
-          if ($LASTEXITCODE -ne 0) {
-            Write-Error "CRITICAL FAILURE: npm install fallback failed (exit=$LASTEXITCODE)"
-            if (Test-Path npm_install.log) { Get-Content npm_install.log -Tail 120 | Write-Host }
-            exit 1
-          } else {
-            $success = $true
-            Write-Host "SUCCESS: npm install fallback completed"
+          if (-not $success) {
+            Write-Warning "npm ci failed after retries. Falling back to 'npm install' (full)..."
+            $code = Invoke-Cmd "npm install --no-audit --fund=false --prefer-offline"
+            if ($code -ne 0) { Write-Error "npm install fallback failed (exit=$code)"; exit $code } else { $success = $true }
+          }
+        } else {
+          # lean mode: ignore-scripts and omit optional to avoid heavy postinstalls
+          for ($i=0; $i -lt $attempts.Count; $i++) {
+            $args = $attempts[$i]
+            $code = Invoke-Cmd ("npm ci --ignore-scripts --omit=optional {0}" -f $args)
+            if ($code -eq 0) { $success = $true; break }
+            if ($i -lt ($attempts.Count-1)) {
+              $sleep = 15 * ($i+1)
+              Write-Warning ("Attempt {0} failed (code={1}). Sleeping {2}s..." -f ($i+1), $code, $sleep)
+              Start-Sleep -Seconds $sleep
+            }
+          }
+          if (-not $success) {
+            Write-Warning "npm ci (lean) failed. Falling back to 'npm install --ignore-scripts --omit=optional'..."
+            $code = Invoke-Cmd "npm install --ignore-scripts --omit=optional --no-audit --fund=false --prefer-offline"
+            if ($code -ne 0) { Write-Error "npm install fallback (lean) failed (exit=$code)"; exit $code } else { $success = $true }
           }
         }
 
-        Write-Host "SUCCESS: npm ci completed"
-
-        
+        $dur = [int]((Get-Date) - $start).TotalSeconds
+        Write-Host ("SUCCESS: npm install completed (mode={0}) in {1}s" -f $mode, $dur)
+        if ($env:GITHUB_OUTPUT) { "install_duration_seconds=$dur" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8 }
         exit 0
+
 branding:
   icon: 'download'
   color: 'green'
