--- a/.github/workflows/pr-performance-check.yml
+++ b/.github/workflows/pr-performance-check.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Install dependencies (Hardened)
         uses: ./.github/actions/npm-install
         with:
+          mode: lean
           node-version: '20.x'
 
       - name: Build project
