--- a/.github/workflows/soft-gates.yml
+++ b/.github/workflows/soft-gates.yml
@@ -126,6 +126,7 @@ jobs:
       - name: Install dependencies (using enhanced npm-install action)
         uses: ./.github/actions/npm-install
         with:
+          mode: lean
           working-directory: '.'
           node-version: ${{ env.NODE_VERSION }}
 
