--- a/.github/actions/npm-install/action.yml
+++ b/.github/actions/npm-install/action.yml
@@ -81,10 +81,10 @@ runs:
         npm config set fetch-retry-mintimeout 20000 --location=project | Out-Null
 
         $npmPath = (Get-Command npm -ErrorAction Stop).Source
-        function Invoke-Npm([string[]]$args) {
+        function Invoke-Npm([string[]]$argv) {
           $global:LASTEXITCODE = 0
-          Write-Host ("[npm-install] running: npm {0}" -f ($args -join ' '))
-          & $npmPath @args 2>&1 | Tee-Object -FilePath $logFile -Append | Out-Host
+          Write-Host ("[npm-install] running: npm {0}" -f ($argv -join ' '))
+          & $npmPath @argv 2>&1 | Tee-Object -FilePath $logFile -Append | Out-Host
           if ($null -eq $LASTEXITCODE) { return 0 }
           return [int]$LASTEXITCODE
         }
@@ -97,7 +97,7 @@ runs:
           for ($i=0; $i -lt $attempts.Count; $i++) {
             $arg = $attempts[$i]
             $common = @('ci')
-            if ($arg) { $common += $arg }
+            if ($arg) { $common = $common + @($arg) }
             $code = Invoke-Npm $common
             if ($code -eq 0) { $success = $true; break }
             if ($i -lt ($attempts.Count-1)) {
@@ -116,7 +116,7 @@ runs:
           for ($i=0; $i -lt $attempts.Count; $i++) {
             $arg = $attempts[$i]
             $common = @('ci','--ignore-scripts','--omit=optional')
-            if ($arg) { $common += $arg }
+            if ($arg) { $common = $common + @($arg) }
             $code = Invoke-Npm $common
             if ($code -eq 0) { $success = $true; break }
             if ($i -lt ($attempts.Count-1)) {
