ci(build): ensure rollup native package before vite build (Windows)

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -54,6 +54,17 @@ jobs:
         run: node scripts/ci/patch-tree-sitter.js
       - name: Strip BOMs in config files
         run: node scripts/ci/fix-bom.cjs
+      - name: Ensure rollup native package (win32-x64)
+        shell: pwsh
+        run: |
+          Write-Host "Checking @rollup/rollup-win32-x64-msvc availability..."
+          node -e "require('@rollup/rollup-win32-x64-msvc')" 2>$null
+          if ($LASTEXITCODE -ne 0) {
+            Write-Warning "@rollup/rollup-win32-x64-msvc missing; installing no-save..."
+            npm install @rollup/rollup-win32-x64-msvc --no-save --no-audit --fund=false
+          } else {
+            Write-Host "rollup native package available."
+          }
       - name: Build application (capture log)
         env:
           VITE_E2E_SMOKE: 'true'
