--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "@sentry/cli": "^2.39.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/dom": "^10.0.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.8",
