--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ViteGame Studio",
   "private": true,
   "version": "0.1.0",
-  "_trigger_ci": "Trigger CI/CD pipeline activation",
+  "_trigger_ci": "Activate CI at 2025-10-13T23:58:00",
   "type": "module",
   "main": "dist-electron/electron/main.js",
   "scripts": {
