--- a/.github/workflows/security-unified.yml
+++ b/.github/workflows/security-unified.yml
@@ -49,6 +49,13 @@ concurrency:
 
 env:
   NODE_VERSION: '20.x'
+  # Ensure native rebuilds (node-gyp) find MSVC 2022 and use C++20 on Windows runners (ADR-0005)
+  CL: '/std:c++20 /EHsc'
+  CXXFLAGS: '-std=c++20'
+  GYP_MSVS_ARGS: '/std:c++20'
+  GYP_CXXFLAGS: '-std=c++20'
+  GYP_MSVS_VERSION: '2022'
+  npm_config_msvs_version: '2022'
 
 jobs:
   # Stage 1: Static Security Scan (fast, parallel execution)
