ci(lint): fix Prettier errors in commitlint config and security-helpers; make ESLint pre-fix non-blocking in workflow-guardian (ADR-0005)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+﻿name: CI/CD Pipeline
 
 on:
   workflow_dispatch:
@@ -106,6 +106,7 @@ jobs:
         id: eslint_prefx
         if: runner.os == 'Windows'
         uses: ./.github/actions/eslint-prefx
+        continue-on-error: true
 
       - name: English comments + no-emoji scan (advisory)
         run: node scripts/ci/scan-comments-no-emoji.cjs
