ci(security): install production deps only in build-and-package to avoid node-gyp rebuild of dev modules (ADR-0005)

--- a/.github/workflows/security-unified.yml
+++ b/.github/workflows/security-unified.yml
@@ -109,6 +109,8 @@ jobs:
         uses: ./.github/actions/npm-install
         with:
           mode: lean
+        env:
+          npm_config_omit: dev
 
       - name: Install jq tool
         shell: pwsh
